force-app/main/default/objects/Knowledge__kav/fields/I_ST_Answer__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>