force-app/main/default/objects/Knowledge__kav/fields/I_ST_Chat_Answer__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Chat_Answer__c</fullName>
    <description>Chat Answer</description>
    <label>Chat Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>