force-app/main/default/objects/Knowledge__kav/fields/I_ST_Description__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Description__c</fullName>
    <description>for IST-100</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>