force-app/main/default/objects/Knowledge__kav/fields/I_ST_Review_After_days__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Review_After_days__c</fullName>
    <defaultValue>365</defaultValue>
    <inlineHelpText>Please provide number of days after publishing the article needs to be reviewed.</inlineHelpText>
    <label>Review After days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>