force-app/main/default/objects/Knowledge__kav/fields/I_ST_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Review_Date__c</fullName>
    <description>refer for IST-100</description>
    <formula>(LastPublishedDate +  I_ST_Review_After_days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>