force-app/main/default/objects/Knowledge__kav/recordTypes/I_ST_Knowledge_Article.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Knowledge_Article</fullName>
    <active>true</active>
    <description>This can be used for Knowledge articles</description>
    <label>Knowledge Article</label>
</RecordType>