force-app/main/default/objects/Knowledge__kav/listViews/I_ST_Assigned_For_Publishing.listView-meta.xml
<ListView>
    <fullName>I_ST_Assigned_For_Publishing</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ASSIGNEDBY_USER</columns>
    <columns>ASSIGNEDTO_USER</columns>
    <columns>ASSIGNMENT_DATE</columns>
    <columns>ASSIGNMENT_DUE_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSIGNEDTO_USER</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Assigned For Publishing</label>
</ListView>