force-app/main/default/objects/Knowledge__kav/listViews/I_ST_Review_Article.listView-meta.xml
<ListView>
    <fullName>I_ST_Review_Article</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_ST_Review_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>Review Article</label>
</ListView>